<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <Spinner
        android:id="@+id/spinner_despesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:spinnerMode="dialog" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_valor"
        android:gravity="center"
        android:text="@string/valor_da_despesa"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/id_valor_corrida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textview_gasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_lgasolina"
        android:gravity="center"
        android:text="@string/litros"
        android:textStyle="bold"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/id_qtd_gasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textSize="25sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textview_observacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_observacao"
        android:gravity="center"
        android:text="@string/descri_o"
        android:textStyle="bold"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/id_observacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:inputType="text"
        android:lines="10"
        android:textSize="25sp"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:background="@drawable/drw_btn_salvar_contato"
            android:contentDescription="@string/salvar_despesa"
            android:text="@string/salvar_despesa"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>


</LinearLayout>